--- a/resources/css/login.css
+++ b/resources/css/login.css
@@ -91,9 +91,11 @@
   .submit{
     margin-top: 40px;
     margin-bottom: 30px;
+    margin-left: 160px;
     text-transform: uppercase;
     font-weight: 600;
     font-family: 'Nunito', sans-serif;
+    color: white;
     background:   #ff6130;
   }
 
